[package]
name = "bitcoin_address_miner"
version = "0.1.0"
edition = "2021"
authors = ["Simone Ragonesi <simone.ragonesi@protonmail.com>"]
description = "A utility for generating and mining Bitcoin addresses in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31.0", features = ["rand-std"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.2"
